<resources>
    <string name="app_name">Learn Loop</string>
    <string name="facebook_app_id">496379855971971</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="app_description1">The app aims to promote the genuine adoption of financial literacy knowledge taught in schools during Education &amp; Career Guidance modules.</string>
    <string name="app_description2">Even though students are exposed to basic financial literacy concepts such as “Budgeting”, youths do not put it into practice as the modules only provide theoretical knowledge, not practical knowledge.</string>
    <string name="app_description3">LearnLoop aims to provide the practical knowledge aspect through features such as:\n ⚪ Setting Budgets\n ⚪ Budgeting\n ⚪ Expenditure Tracker\n ⚪ Financial Literacy Courses\n ⚪ Student Discount Library</string>
    <string name="smu_title">Citi Foundation-SMU Financial Literacy Program for Young Adults</string>
    <string name="smu_name">Singapore Management University</string>
    <string name="smu_subname">Sim Kee Boon Institute for Financial Economics</string>
    <string name="course1_title">Budgeting Principles</string>
    <string name="course1_lecturer">Kang Thet Sing</string>
    <string name="course1_lecturerpos">Senior Lecturer at SP</string>
    <string name="smu_desc">In a competitive landscape where money often has the final word, there is a pressing need for young adults to learn about taking control of their finances. Many will want to start planning a roadmap to financial success. This is where the program aims to help answer the million-dollar question: how to stay the course and build lifelong wealth?\n\nAll of the essentials are included in this world-ready program. These...</string>
    <string name="budgeting_principles_desc">Making a budgeting plan is one thing. Sticking to it is another.\n\nThis course focuses on refreshing your budgeting knowledge acquired from school such as concepts, plans, identifying and classification of expenditures and more.\n\nThis course will also guide you on building a sustainable budgeting plan and share tips on how one can stick to the plan in the long r...</string>
    <string name="Your_account">See information about your account, download an archive of your data, or learn about your account deactivation options.</string>
    <string name="security_and_account">Manage your account\'s security and keep track of your account\'s usage including apps that you have connected to your account</string>
    <string name="privacy_and_safety">Manage what information you see and share on Twitter.</string>
    <string name="notifications">Select the kinds of notifications you get about your activities, interest, and recommendations.</string>
    <string name="accessibility">Manage how SPACED content is displayed to you.</string>
    <string name="Additional_resources">Check out other places for helpful information to learn more about SPACED products and services.</string>
    <string name="YourAccount_description">See information about your account, download an archive of your data, or learn about your account deactivation options.</string>
    <string name="accInfo">See information about your account, download an archive of your data, or learn about your account deactivation options.</string>
    <string name="changePassword">Change your password at any time.</string>
    <string name="dataArchive">Get insights into the type of information stored for your account.</string>
    <string name="deactivateAcc">Find out how you can deactivate your account.</string>
    <string name="security_account_access_description">Manage your account\'s security and keep track of your account\'s usage including apps that you have connected to your account.</string>
    <string name="security">Manage your account\'s security</string>
    <string name="apps_and_session">See information about when you logged into your account and the apps you connected to your account.</string>
    <string name="connectedAcc">Manage Google or Apple accounts connected to SPACED to log in.</string>
    <string name="adsPreference">Manage your ads experience on LearnLoop.</string>
    <string name="off_spaced_activity">Manage how LearnLoop uses your online activity outside of it, such as the website you visit, to personalize your experience.</string>
    <string name="dataSharing">Allow sharing of additional information with LearnLoop\'s business partners.</string>
    <string name="locationInfo">Manage the location information LearnLoop uses to personalize your experience.</string>
    <string name="notificationDesc">Select the kind of notifications you get about your activities, interests, and recommendations.</string>
    <string name="filters">Choose the notifications you will like to see-and those you don\'t</string>
    <string name="preferences">Select your preferences by notification type.</string>
    <string name="accessibility_display_language_description">Manage how LearnLoop content is displayed to you.</string>
    <string name="Accessibility">Manage aspects of your LearnLoop experience such as limiting color contrast and motion. These settings affect all the LearnLoop accounts on the device.</string>
    <string name="display_and_sound">Manage your font size, color and background.These settings affect all of LearnLoops accounts on this device.</string>
    <string name="Languages">Manage which languages are used to personalize your LearnLoop experience.</string>
    <string name="dataUsage">Limit how LearnLoop uses some of your network data. These settings affect all the LearnLoop accounts on this device.</string>
    <string name="txtAccDeactivation">You\'re about to start the process of deactivating your SPACED account. Your display name, @username, and profile will no longer be viewable on SPACED.com, SPACED for iOS, or SPACED for Android.</string>
    <string name="WhatElseToKnow">You can restore your SPACED account if it was accidentally or wrongfully deactivated for up to 30days after deactivation. \n \nSome account information may still be available in search engines, such as Google or Bing. \n \nIf you just want to change your @username, you don\'t need to deactivate your account - edit it in your settings. \n \nTo use your current @username or email address with a different SPACED account, change them before you deactivate this account. \n \nIf you want to download your SPACED data, you\'ll need to complete both the request and download process before deactivating your account. Links to download your data cannot be sent to deactivate accounts.</string>
    <string name="two_factor_authentication">Protect your account from unauthorized access by requiring a second authentication method in addition to your SPACED password. You can choose text message, authentication app, or security key.</string>
    <string name="passwordProtection">For added protection, you\'ll need to confirm your email address or phone number to reset your SPACED password.</string>
    <string name="adsPreference_description">You will always see ads on SPACED based on your activity. When this setting is enabled, SPACED may further personalize ads from SPACED advertisers, on and off SPACED, by combining your activity with other online activity and information from our partners.</string>
    <string name="SPACED_content_across_web">This setting lets SPACED keep track of your visits to other websites that integrate SPACED content, such as embedded timelines. That information makes SPACED better for you, such as by personalizing your experience. This web browsing history will never be stored with your name email, or phone number.</string>
    <string name="personalizedIdentity">SPACED will always personalize your experience based on information you\'ve provided, as well as the devices you\'ve used to log in. When this setting is enabled, SPACED may also personalize based on other inferences about your identity, like devices and browsers you haven\'t used to log in to SPACED or email addresses and phone numbers similar to those linked to your SPACED account.</string>
    <string name="off_SPACED_description">Manage how SPACED uses your online activity outside of SPACED, such as the websites you visit, to personalize your experience.</string>
    <string name="infoSharing">SPACED always shares information with business partners as a way to run and improve its products. When enabled, this allows SPACED to share additional information with those partners to help support running SPACED\'s business, including making SPACED\'s marketing activities on other sites and apps more relevant for you.</string>
    <string name="personalizeLocation">SPACED always uses some information, like where you signed up and your current location, to help show you more relevant content. When this setting is enabled, SPACED may also personalize your experiences - for example, showing you more local content, ads, and recommendations.</string>
    <string name="preciseLocation">If enabled, SPACED will collect, store, and user your device\'s precise location, such as GPS information. This lets SPACED improve your experience-for example, showing you more local content, ads, and recommendations.</string>
    <string name="privacyPolicyIntro">Last update: 03/7/22 \n\n This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the app.\n\nWe use your Personal Information only for providing and improving the Site. By using the Site, you agree to the collection and use of information in accordance with this policy.</string>
    <string name="logData">Like many app operators, we collect information that your browser sends whenever you visit our App.\n\n This Log Data may include information such as your computer\'s Internet Protocol (IP) address, browser type, browser version, the pages of our app that you visit, the time and date of your visit, the time spent on those pages and other statistics.</string>
    <string name="communication">We will not use your Personal Information to contact you with newsletter, marketing or promotional materials and other information. We will only be contacting you through email with regards to new updates of the app and replies to our user\'s feedback.</string>
    <string name="infoCollection">While using our Site, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information will include your name, contact information.</string>
    <string name="privacyPolicy_security">The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage, is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.</string>
    <string name="privacyPolicy_changes">This Privacy Policy is effective as of (add date) and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.\n\nWe reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. Your continued use of the Service after we post any modifications to the Privacy Policy on this page will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.\n\n If we make any material changes to this Privacy Policy, we will notify you either through the email address you have provided us, or by placing a prominent notice on our app.</string>
</resources>